--- a/SoundScribe.csproj
+++ b/SoundScribe.csproj
@@ -57,4 +57,28 @@
 	  <Folder Include="Views\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="Add_track.xaml.cs">
+	    <DependentUpon>Add_track.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Flyuot2.xaml.cs">
+	    <DependentUpon>Flyuot2.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Add_track.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Flyuot2.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Leaderboard.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Tracklist.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
