--- a/SoundScribe.csproj
+++ b/SoundScribe.csproj
@@ -86,6 +86,9 @@
 	  <MauiXaml Update="Views\RatePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\SecondMain.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
